:white_check_mark: [#17] added api key tests for unothorized and permission lacking keys. Also added a mixin to automatically send an api token with all permissions.
